Fix SonarQube issues: CORS security hotspot, boolean literal, unused field, long cast, RuntimeException, .toList(), assertion chains, unused variable